--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -87,6 +87,7 @@ rules:
       - ""
     resources:
       - events
+      - secrets
     verbs:
       - create
       - delete
@@ -209,3 +210,14 @@ rules:
       - create
       - update
       - delete
+  - apiGroups: 
+      - admissionregistration.k8s.io
+    resources:
+      - mutatingwebhookconfigurations
+      - validatingwebhookconfigurations
+    verbs:
+      - get
+      - create
+      - update
+      - delete
+      
