Introduce kubebuilder markers for type validation/defaulting (#449)

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -155,6 +155,7 @@ spec:
                     configMapName:
                       type: string
                     mountPath:
+                      default: /etc/hadoop/conf
                       type: string
                   type: object
                 image:
@@ -162,6 +163,7 @@ spec:
                     name:
                       type: string
                     pullPolicy:
+                      default: Always
                       type: string
                     pullSecrets:
                       items:
@@ -176,6 +178,7 @@ spec:
                 job:
                   properties:
                     allowNonRestoredState:
+                      default: false
                       type: boolean
                     args:
                       items:
@@ -193,6 +196,10 @@ spec:
                         type: string
                       type: array
                     cleanupPolicy:
+                      default:
+                        afterJobCancelled: DeleteCluster
+                        afterJobFails: KeepCluster
+                        afterJobSucceeds: DeleteCluster
                       properties:
                         afterJobCancelled:
                           type: string
@@ -808,14 +815,21 @@ spec:
                       minimum: 0
                       type: integer
                     mode:
+                      default: Detached
+                      enum:
+                        - Detached
+                        - Blocking
+                        - Application
                       type: string
                     noLoggingToStdout:
+                      default: false
                       type: boolean
                     nodeSelector:
                       additionalProperties:
                         type: string
                       type: object
                     parallelism:
+                      default: 1
                       format: int32
                       type: integer
                     podAnnotations:
@@ -833,6 +847,13 @@ spec:
                     pyModule:
                       type: string
                     resources:
+                      default:
+                        limits:
+                          cpu: 2
+                          memory: 2Gi
+                        requests:
+                          cpu: 200m
+                          memory: 512Mi
                       properties:
                         limits:
                           additionalProperties:
@@ -852,6 +873,7 @@ spec:
                           type: object
                       type: object
                     restartPolicy:
+                      default: Never
                       type: string
                     savepointGeneration:
                       format: int32
@@ -1657,10 +1679,10 @@ spec:
                           - name
                         type: object
                       type: array
-                  required:
-                    - restartPolicy
                   type: object
                 jobManager:
+                  default:
+                    replicas: 1
                   properties:
                     ServiceAnnotations:
                       additionalProperties:
@@ -1671,6 +1693,7 @@ spec:
                         type: string
                       type: object
                     accessScope:
+                      default: Cluster
                       type: string
                     extraPorts:
                       items:
@@ -1714,6 +1737,7 @@ spec:
                         tlsSecretName:
                           type: string
                         useTls:
+                          default: false
                           type: boolean
                       type: object
                     initContainers:
@@ -2406,18 +2430,35 @@ spec:
                         type: string
                       type: object
                     ports:
+                      default:
+                        blob: 6124
+                        query: 6125
+                        rpc: 6123
+                        ui: 8081
                       properties:
                         blob:
+                          default: 6124
                           format: int32
+                          maximum: 65535
+                          minimum: 1
                           type: integer
                         query:
+                          default: 6125
                           format: int32
+                          maximum: 65535
+                          minimum: 1
                           type: integer
                         rpc:
+                          default: 6123
                           format: int32
+                          maximum: 65535
+                          minimum: 1
                           type: integer
                         ui:
+                          default: 8081
                           format: int32
+                          maximum: 65535
+                          minimum: 1
                           type: integer
                       type: object
                     readinessProbe:
@@ -2499,9 +2540,17 @@ spec:
                           type: integer
                       type: object
                     replicas:
+                      default: 1
                       format: int32
                       type: integer
                     resources:
+                      default:
+                        limits:
+                          cpu: 2
+                          memory: 2Gi
+                        requests:
+                          cpu: 200m
+                          memory: 512Mi
                       properties:
                         limits:
                           additionalProperties:
@@ -4066,6 +4115,7 @@ spec:
                     type: string
                   type: object
                 recreateOnUpdate:
+                  default: true
                   type: boolean
                 revisionHistoryLimit:
                   format: int32
@@ -4073,8 +4123,11 @@ spec:
                 serviceAccountName:
                   type: string
                 taskManager:
+                  default:
+                    replicas: 3
                   properties:
                     deploymentType:
+                      default: StatefulSet
                       type: string
                     extraPorts:
                       items:
@@ -4797,15 +4850,28 @@ spec:
                         type: string
                       type: object
                     ports:
+                      default:
+                        data: 6121
+                        query: 6125
+                        rpc: 6122
                       properties:
                         data:
+                          default: 6121
                           format: int32
+                          maximum: 65535
+                          minimum: 1
                           type: integer
                         query:
+                          default: 6125
                           format: int32
+                          maximum: 65535
+                          minimum: 1
                           type: integer
                         rpc:
+                          default: 6122
                           format: int32
+                          maximum: 65535
+                          minimum: 1
                           type: integer
                       type: object
                     readinessProbe:
@@ -4887,9 +4953,17 @@ spec:
                           type: integer
                       type: object
                     replicas:
+                      default: 3
                       format: int32
                       type: integer
                     resources:
+                      default:
+                        limits:
+                          cpu: 2
+                          memory: 2Gi
+                        requests:
+                          cpu: 200m
+                          memory: 512Mi
                       properties:
                         limits:
                           additionalProperties:
