--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -1679,6 +1679,8 @@ spec:
                           - name
                         type: object
                       type: array
+                  required:
+                    - restartPolicy
                   type: object
                 jobManager:
                   default:
